{{$NEXT}}

1.103610  2010-12-27 14:47:04 Europe/London

  * Now extends MetaResources so supports arbitrary other resources

1.103590  2010-12-25 00:50:56 Europe/London

  * Initial release.