@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+  * Add repository.web link
+  * Add repository.type setting
+  * Change to use HTTPS in all GitHub links
+
 1.103610  2010-12-27 14:47:04 Europe/London
 
   * Now extends MetaResources so supports arbitrary other resources
